--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="https://kit.fontawesome.com/712a2d4988.js" crossorigin="anonymous"></script>
         <!-- CSSファイルの読み込み -->
         <link rel="stylesheet" href="style.css" />
